웹팩 설정 마무리
1. 웹팩 설정을 dev,prod 변수로 나눈다
2. 코드스플릿팅 - printMe함수 테스트한다
3. 이후 서버사이드 랜더링을 express로 서버를 띄워서 테스트해본다

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,8 @@
 body {
-    background-color: #ccc;
-    .hello {
+    background: url('./images/dobbyisfree.png');
+    background-size: 130px;
+    background-repeat: no-repeat;
+    > div {
         font-size: 20px;
         color: red;
     }
